--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -8,4 +8,5 @@
     <string name="enter_code">Введите код</string>
     <string name="send_code_again">Получить код повторно</string>
     <string name="help1">На ваш номер отправлен код подтверждения, если он не пришёл нажмите на кнопку получить код повторно</string>
+    <string name="screen_main_title">Мои карты</string>
 </resources>
