--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -10,4 +10,5 @@
     <string name="help1">На ваш номер отправлен код подтверждения, если он не пришёл нажмите на кнопку получить код повторно</string>
     <string name="screen_main_title">Мои карты</string>
     <string name="synced">Не синхронизированно</string>
+    <string name="information">Информация</string>
 </resources>
