--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="help1">A confirmation code has been sent to your number, if it has not arrived, click on the button to get the code again</string>
     <string name="screen_main_title">My cards</string>
     <string name="synced">No synced</string>
+    <string name="information">Information</string>
 </resources>
