Добавлен контент для всплывашки с добавлением карты и для всплывшки с редактированием профиля И ВАДИМ

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -11,4 +11,9 @@
     <string name="screen_main_title">Мои карты</string>
     <string name="synced">Не синхронизированно</string>
     <string name="information">Информация</string>
+    <string name="city">Город</string>
+    <string name="email">Электронная почта</string>
+    <string name="ready">Готово</string>
+    <string name="shop">Магазин</string>
+    <string name="cardNumber">Номекр карты</string>
 </resources>
