--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="screen_main_title">My cards</string>
     <string name="synced">No synced</string>
     <string name="information">Information</string>
+    <string name="city">City</string>
+    <string name="email">E-mail</string>
+    <string name="ready">Ready</string>
+    <string name="shop">Shop</string>
+    <string name="cardNumber">Card Number</string>
 </resources>
